fixed bug related to styles not showing, app looks much more polished

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,4 @@
-/* src/app/globals.css */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 /*
   Tailwind v4's @theme directive allows inline customization.
@@ -26,7 +23,7 @@
 /* Base styles for the app */
 html,
 body {
-  height: 100%;
+  /*height: 100%;*/
   font-family: var(--font-body);
   color: var(--color-text-dark);
   background-color: var(--color-background-light);
